# image-upload-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_localstack.sh  test.py
app/api/: deps.py
app/api/routers/: auth.py  images.py
app/controllers/: images.py
app/core/: config.py  logging_config.py
app/models/: image.py  token.py  user.py
app/services/: auth_service.py  clustering_service.py  database_service.py  description_service.py  embedding_service.py  naming_service.py  s3_service.py
