[project]
name = "image-upload-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=2.23.2",
    "awscli>=1.41.8",
    "awscli-local>=0.22.0",
    "boto3>=1.39.8",
    "botocore>=1.39.8",
    "fastapi>=0.116.1",
    "firebase-admin>=7.0.0",
    "httpx>=0.28.1",
    "pillow>=11.3.0",
    "pydantic[email,standard]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "rich>=14.1.0",
    "uvicorn[standard]>=0.35.0",
]
